Add notices my posts and localhost CORS
